fixed image aspect ratio, hid x overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   min-height: 400vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -44,10 +46,9 @@ header {
 }
 
 .background {
-  min-width: 100vw;
-  max-width: 100vw;
   min-height: 100vh;
   max-height: 100vh;
+  overflow: hidden;
 }
 
 #first {
